--- a/liste_style.css
+++ b/liste_style.css
@@ -17,20 +17,40 @@ h1{
     color: white;
     border: 0px;
     height: 50%;
-    width: 500px;
+    width: 50%;
     font-size: 200%;
-    border-radius: 100%;
+    padding: 2%;
+    border-radius: 50px;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
-    margin-left: 20%;
+    margin-left: 25%;
+    margin-right: 20%;
     text-align: center;
+    align-content: center;
+    display: flexbox;
+    
 }
 .modal_container{
     position: fixed;
     top: 0px;
-    width: auto;
+    width: 100%;
     height: auto;
     display: none;    
-
+    opacity: 0;
+    /* transition: opacity 0.3s ease, transform 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67); */
+    /* Déplace la modal hors de l'écran vers le bas */ 
+}
+@keyframes douce {
+    from 0%{
+        width: 0%;
+    }
+    to 100%{
+        width: 100%;
+    }
+}
+.modal_container.visible {
+    opacity: 1;
+    transform: translateY(0);
+    display: block;
 }
 .fond_gris{
     position: absolute;
@@ -48,6 +68,8 @@ h1{
     position: relative;
     margin: 5% 10% 10% 10vw;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
+    max-height: 80vh; /* Hauteur maximale de la modal (80% de la hauteur de la fenêtre) */
+    overflow-y: auto; /* Activer le défilement vertical si le contenu dépasse la hauteur maximale */
 }
 .page_modale h2{
     min-width: 300px;
@@ -67,15 +89,17 @@ h1{
     border: 1px solid;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.103);
     font-size: 100%;
+    border: none;
 }
 #cont_description{
     width: auto;
     height: 100%;
     margin-bottom: 2%;
     margin-top: 2%;
-    border: 1px solid;
+    border: none;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.103);
     font-size: 100%;
+
 }
 .page_modale button{
     font-family: 'inter';
@@ -85,7 +109,7 @@ h1{
     height: 50%;
     width: 80%;
     font-size: 200%;
-    border-radius: 100%;
+    border-radius: 50px;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
     margin-top: 10px;
     text-decoration: none;
@@ -114,10 +138,17 @@ h1{
     margin-bottom: 20px;
     width: 100%;
     height: 10%;
-    border: 1px solid;
+    border: none;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.103);
     font-size: 60%;
     color: black;
+    border-radius: 5px;
+}
+#priorite{
+    box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.103);
+    width: 50%;
+    font-size: 60%;
+    border: none;
 }
 .fermer{
     padding: 5px 10px 5px 10px;
@@ -179,6 +210,23 @@ h1{
     background-color: #BA68C8;
 }
 
+.statut{
+    cursor: pointer;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    background-color: #5ddf52;
+}
+.toutStatut{
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+
 @media screen and (max-width: 660px){
     .footer{
         flex-direction: column;
@@ -197,6 +245,18 @@ h1{
     }
     .item{
         margin-bottom: 5%;
+    }
+    .page_modale{
+        position: relative;
+        margin: 0px;
+        top: 5px;
+        max-height: 80vh; /*Hauteur maximale de la modal (80% de la hauteur de la fenêtre) */
+        overflow-y: auto; /* Activer le défilement vertical si le contenu dépasse la hauteur maximale */
+    }
+    .ajouter{
+        width: 300px;
+        padding: 5%;
+        margin-left: 10%;
     }
     
 }
