--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ h1{
     height: 50%;
     width: 80%;
     font-size: 150%;
-    border-radius: 10%;
+    border-radius: 50px;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
     margin-top: 5%;
     margin-right: 10%;
@@ -64,7 +64,7 @@ h1{
     .footer{
         flex-direction: column;
     }
-    .footer button{
+    .footer a{
         width: auto;
     }
 }
