--- a/liste_style.css
+++ b/liste_style.css
@@ -9,7 +9,7 @@ h1{
     font-size: 500%;
     font-family: "Covered By Your Grace", cursive;
 }
-
+/* bouton ajouter tache */
 .ajouter{
     cursor: pointer;
     font-family: 'inter';
@@ -29,6 +29,10 @@ h1{
     display: flexbox;
     
 }
+.ajouter:hover{
+    box-shadow:0px 0px 5px 5px var(--violet);
+}
+/* bloc global de la page modale */
 .modal_container{
     position: fixed;
     top: 0px;
@@ -36,16 +40,9 @@ h1{
     height: auto;
     display: none;    
     opacity: 0;
-    /* transition: opacity 0.3s ease, transform 0.3s cubic-bezier(0.17, 0.67, 0.83, 0.67); */
-    /* Déplace la modal hors de l'écran vers le bas */ 
 }
-@keyframes douce {
-    from 0%{
-        width: 0%;
-    }
-    to 100%{
-        width: 100%;
-    }
+#modal_container_valider{
+    display: none;
 }
 .modal_container.visible {
     opacity: 1;
@@ -58,6 +55,17 @@ h1{
     height: 100vh;
     background: #333333d3;
 }
+.fond_gris_valider{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .page_modale{
     width: auto;
     height: 300%;
@@ -68,16 +76,41 @@ h1{
     position: relative;
     margin: 5% 10% 10% 10vw;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
-    max-height: 80vh; /* Hauteur maximale de la modal (80% de la hauteur de la fenêtre) */
-    overflow-y: auto; /* Activer le défilement vertical si le contenu dépasse la hauteur maximale */
+    max-height: 80vh;
+    overflow-y: auto; /*défilement vertical*/
 }
-.page_modale h2{
+.page_modale_valider{
+    min-width: 300px;
+    background-color: white;
+    border-radius: 15px;
+    position: absolute;
+    margin: 0% 10% 10% 10vw;
+    box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
+    top: 10%;
+    left: 20%;
+}
+.gif-valider{
+    width: 70%;
+    height: 150%;
+    margin: auto;
+    position: absolute;
+    padding: 5%;
+    display: flex;
+    font-size: 10%;
+    margin-left: 5%;
+    margin-right: 20%;
+    text-align: center;
+    align-content: center;
+}
+.page_modale h2,
+.page_modale_valider h2{
     min-width: 300px;
     border-radius: 15px;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
     text-align: center;
 }
-.page_modale label{
+.page_modale label,
+.page_modale_valider label{
     font-weight: bold;
     font-size: 100%;
 }
@@ -90,6 +123,7 @@ h1{
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.103);
     font-size: 100%;
     border: none;
+    border-radius: 5px;
 }
 #cont_description{
     width: auto;
@@ -118,10 +152,14 @@ h1{
     left: 10%;
     cursor: pointer;
 }
+.page_modale button:hover{
+    box-shadow:0px 0px 5px 5px var(--violet);
+}
 #cont_description{
     height: 200px;
     text-align: center;
     resize: none;
+    border-radius: 5px;
 }
 .main{
     container: grid;
@@ -149,6 +187,7 @@ h1{
     width: 50%;
     font-size: 60%;
     border: none;
+    border-radius: 15px;
 }
 .fermer{
     padding: 5px 10px 5px 10px;
@@ -163,13 +202,15 @@ h1{
     cursor: pointer;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
 }
+.fermer:hover{
+    box-shadow:0px 0px 5px 5px var(--violet);
+}
 .list_taches {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
     margin: 10%;
 }
-
 .item {
     border: 1px solid #e27b7b;
     border-radius: 10px;
@@ -177,18 +218,17 @@ h1{
     background-color: transparent;
     box-shadow:0px 0px 5px 5px rgba(0, 0, 0, 0.212);
 }
-
+/* differentes couleurs des taches en fonction des priorites */
 .priorite_faible {
     background-color: #02AAAE;
 }
-
 .priorite_moyenne {
     background-color: #F58E2B;
 }
 .priorite_elevee {
     background-color: #E6426C;
 }
-
+/* les boutons dans les blocs de taches */
 .supprimer{
     border: none;
     background-color: transparent;
@@ -250,8 +290,8 @@ h1{
         position: relative;
         margin: 0px;
         top: 5px;
-        max-height: 80vh; /*Hauteur maximale de la modal (80% de la hauteur de la fenêtre) */
-        overflow-y: auto; /* Activer le défilement vertical si le contenu dépasse la hauteur maximale */
+        max-height: 80vh;
+        overflow-y: auto;
     }
     .ajouter{
         width: 300px;
